--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,body {
+  height: 100vh;
+  width: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #000000d7;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-image: url(./bg.gif);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: fit-content;
+  overflow-x: hidden;
+}
+
+.open {
+  right: 24rem;
 }
